SW-24691 - Fix issue with off-canvas menu being visible for a second, added click event to a cookies name to toggle the input

--- a/themes/Frontend/Responsive/frontend/_public/src/less/_components/cookie-consent-manager.less
+++ b/themes/Frontend/Responsive/frontend/_public/src/less/_components/cookie-consent-manager.less
@@ -1,6 +1,6 @@
 #cookie-consent:extend(.sidebar-main.off-canvas) {
     .unitize-width(280);
-    .transition(all 0.45s cubic-bezier(.3,0,.15,1));
+    .transition(transform 0.45s cubic-bezier(.3,0,.15,1));
 
     &.off-canvas {
         position: fixed;
@@ -62,6 +62,10 @@
         .unitize-padding(15, 0);
 
         position: relative;
+
+        .cookie--label {
+            cursor: pointer;
+        }
     }
 
     .cookie-consent--group-container {
